--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DELTA AS324MT</title>
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body >
@@ -50,7 +51,7 @@
 
       <hr class="my-2">
       <h3>DIGITAL INPUTS STATE</h3>
-      {{ digitalInputs }}
+      {{ binDI }}
 
       <div id="digital-inputs" class="mt-2">
         <digital-input
@@ -63,12 +64,67 @@
 
       <hr class="my-2">
       <h3>DIGITAL OUTPUTS STATE</h3>
-      {{ digitalOutputs }}
+      {{ binDO }}
+
+      <div class="mt-2">
+        <b-button size="sm" variant="info" 
+          @click="sendNewDOutputState">
+          Change Output States
+        </b-button>
+        <b-button size="sm" variant="primary"
+          @click="clearOutputSelection">
+          Clear Selection
+        </b-button>
+      </div>
+
+      {{ deltaRegisters['AO01'] }}<input v-model="deltaAO['AO01'].setV">
+      {{ deltaRegisters['AO02'] }}<input v-model="deltaAO['AO02'].setV">
+      {{ deltaRegisters['AO03'] }}<input v-model="deltaAO['AO03'].setV">
+<!---
+      <ul id="v-for-object" class="demo">
+        <li v-for="(aOut, id) in deltaAO" :key="id">
+          {{ id }} : {{ aOut.name }}
+        </li>
+      </ul>
+-->
+      <table id="analog-output-table" class="table">
+          <tbody>
+            <tr>
+              <th>Analog Output</th>
+              <th>Device</th>
+              <th>Actual Value</th>
+              <th>Target Value</th>
+            </tr>
+            <tr v-for="(aOut, id) in deltaAO" :key="id">
+              <th>{{ id }}</th>
+              <td>{{ aOut.name }}</td>
+              <th>{{ deltaRegisters[ id ] }}</th>
+              <th>
+                <input class="analog-input"
+                  v-model="deltaAO[  id  ].setV"
+                  type="number" min="0" max="32000"
+                  placeholder="no change">
+
+                <b-button size="sm" variant="success" title="Set"
+                  @click="sendNewDOutputState">
+                    <i class="fa fa-check"></i>
+                </b-button>
+
+                <b-button size="sm" variant="danger" title="Clear"
+                  @click="deltaAO[  id  ].setV = null">
+                  <i class="fa fa-broom"></i>
+                </b-button>
+              </th>
+            </tr>
+          </tbody>
+      </table>
 
       <div id="digital-outputs" class="mt-2">
         <digital-output
-          v-for="output in deltaOutputs"
+          v-for="output in deltaDO"
           @click.native="changeDOutputState(output)"
+          :class="{ 'output-button-selected-on' : output.command == '1',
+                    'output-button-selected-off': output.command == '0'} "
           :output="output"
           :key="output.id"
         ></digital-output>
