--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <title>DELTA AS324MT</title>
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body >
     <section id="app" class="b-container">
@@ -48,10 +48,6 @@
       <hr class="my-2">
       <h3>ANALOG OUTPUTS</h3>
 
-      {{ deltaRegisters['AO01'] }}<input v-model="deltaAO['AO01'].setV">
-      {{ deltaRegisters['AO02'] }}<input v-model="deltaAO['AO02'].setV">
-      {{ deltaRegisters['AO03'] }}<input v-model="deltaAO['AO03'].setV">
-
       <table id="analog-output-table" class="table">
           <tbody>
             <tr>
@@ -63,57 +59,37 @@
               <th>Analog Value</th>
               <th>New Analog Value</th>
             </tr>
+
             <tr v-for="(aOut, id) in deltaAO" :key="id">
               <th>{{ id }}</th>
               <td>{{ aOut.name }}</td>
               <td>{{ aOut.decimalValue }}</td>
-              
               <td>
-                <input 
-                  class="analog-input" 
-                  v-model="deltaAO[ id ].v0"
-                  type="number" step="0.01">
-                <b-button 
-                  size="sm" variant="success" title="Save all"
-                  @click="saveToStorage">
-                  <i class="fa fa-check"></i>
-                </b-button>
+                <line-koeff 
+                  :offset="deltaAO[ id ].v0" 
+                  :step="0.01"
+                  v-on:save-all="saveToStorage"
+                  v-on:input="deltaAO[ id ].v0 = $event"
+                ></line-koeff>
               </td>
               <td>
-                <input 
-                  class="analog-input" 
-                  v-model="deltaAO[ id ].koeff"
-                  type="number" step="0.001">
-                <b-button 
-                  size="sm" variant="success" title="Save all"
-                  @click="saveToStorage">
-                  <i class="fa fa-check"></i>
-                </b-button>
+                <line-koeff 
+                  :offset="deltaAO[ id ].koeff"
+                  :step="0.001"
+                  v-on:save-all="saveToStorage"
+                  v-on:input="deltaAO[ id ].koeff = $event"
+                ></line-koeff>
               </td>
               <th>{{ aOut.strAnalogValue }}</th>
               <th>
-                <b-button 
-                  size="sm" variant="info" title="Fill value"
-                  @click="moveAnalogValueForChange(id)">
-                  <i class="fa fa-share"></i>
-                </b-button>
-
-                <input class="analog-input"
-                  v-model="deltaAO[ id ].setV"
-                  type="number" min="0" max="32767" step="0.1"
-                  placeholder="no change">
-
-                <b-button 
-                  size="sm" variant="success" title="Set"
-                  @click="sendNewOutputState">
-                  <i class="fa fa-check"></i>
-                </b-button>
-
-                <b-button 
-                  size="sm" variant="danger" title="Clear"
-                  @click="deltaAO[ id ].setV = null">
-                  <i class="fa fa-eraser"></i>
-                </b-button>
+                <set-digital-value
+                  :digital-value="deltaAO[ id ].setV"
+                  :min="0" :max="32767" :step="0.1"
+                  v-on:fill="moveAnalogValueForChange(id)"
+                  v-on:send="sendNewOutputState"
+                  v-on:clear="deltaAO[ id ].setV = null"
+                  v-on:input="deltaAO[ id ].setV = $event"
+                ></set-digital-value>
               </th>
             </tr>
           </tbody>
@@ -162,10 +138,12 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
     <script src="//unpkg.com/babel-polyfill@latest/dist/polyfill.min.js"></script>
     <script src="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.js"></script>
-    <script src="js/sensors.settings.js"></script>
   
+    <script src="js/sensors.settings.js"></script>
     <script src="js/components/digital.output.js"></script>
+    <script src="js/components/line.koeff.js"></script>
     <script src="js/components/digital.input.js"></script>
+    <script src="js/components/set.digital.value.js"></script>
     <script src="js/storage.js"></script>
     <script src="js/main.js"></script>
   </body>
